{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 555,
  "lineage": "304f9756-07b2-b313-f960-b2e96ecc24a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-0ab84ab72b62e9932",
            "description": "Security group for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab84ab72b62e9932",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9511dc6753a6a6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/c71ef98d953d6b73",
            "arn_suffix": "app/project-intely-alb/c71ef98d953d6b73",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-intely-alb-462470990.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/c71ef98d953d6b73",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-intely-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02c9511dc6753a6a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00622fc7f0b8f9b26"
              },
              {
                "subnet_id": "subnet-069ccde6425887c4e"
              },
              {
                "subnet_id": "subnet-0bd763362a697759f"
              }
            ],
            "subnets": [
              "subnet-00622fc7f0b8f9b26",
              "subnet-069ccde6425887c4e",
              "subnet-0bd763362a697759f"
            ],
            "tags": {
              "Environment": "project_intely",
              "Project": "intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Project": "intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/c71ef98d953d6b73/36cde545f0bfe78b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg/d08e46b2da73cd1d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/c71ef98d953d6b73/36cde545f0bfe78b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/c71ef98d953d6b73",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.target_group_http.aws_lb_target_group.this",
            "module.target_group_https.aws_lb_target_group.this",
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/c71ef98d953d6b73/10757f1dce471348",
            "certificate_arn": "arn:aws:acm:eu-north-1:851725350979:certificate/df549ec3-6f35-4d10-9fcb-ef8894afe717",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg-https/19befdc239c9ada9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:listener/app/project-intely-alb/c71ef98d953d6b73/10757f1dce471348",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:loadbalancer/app/project-intely-alb/c71ef98d953d6b73",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_acm_certificate.cert",
            "module.alb.aws_lb.this",
            "module.alb.tls_cert_request.cert",
            "module.alb.tls_locally_signed_cert.cert",
            "module.alb.tls_private_key.cert",
            "module.alb.tls_self_signed_cert.ca",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.target_group_http.aws_lb_target_group.this",
            "module.target_group_https.aws_lb_target_group.this",
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private",
            "module.vpc.aws_route.public",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group.module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-02c9511dc6753a6a6",
            "description": "Security group for Project Intely ALB",
            "egress": [],
            "id": "sg-02c9511dc6753a6a6",
            "ingress": [],
            "name": "project-intely-alb-sg-20240617232344662500000003",
            "name_prefix": "project-intely-alb-sg-",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "project_intely",
              "Name": "project-intely-alb-sg",
              "Project": "intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Name": "project-intely-alb-sg",
              "Project": "intely",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_security_group.module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1141242062",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02c9511dc6753a6a6",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group.module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1258531675",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02c9511dc6753a6a6",
            "security_group_rule_id": "sgr-0aec0cd549271c11f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3194541838",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02c9511dc6753a6a6",
            "security_group_rule_id": "sgr-0c3b2f0712adbcdfb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_security_group.module.alb_security_group.aws_security_group.this",
            "module.alb_security_group.module.alb_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:security-group/sg-02aa3cec49d8c5a7f",
            "description": "Control traffic to/from RDS Aurora project-intely-tg",
            "egress": [],
            "id": "sg-02aa3cec49d8c5a7f",
            "ingress": [],
            "name": "project-intely-tg-20240617232344711000000004",
            "name_prefix": "project-intely-tg-",
            "owner_id": "851725350979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "project_intely",
              "Name": "project-intely-tg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Name": "project-intely-tg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_http",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg/d08e46b2da73cd1d",
            "arn_suffix": "targetgroup/project-intely-tg/d08e46b2da73cd1d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg/d08e46b2da73cd1d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "project-intely-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_https",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg-https/19befdc239c9ada9",
            "arn_suffix": "targetgroup/project-intely-tg-https/19befdc239c9ada9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725350979:targetgroup/project-intely-tg-https/19befdc239c9ada9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "project-intely-tg-https",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-0dc16fcdfa215bbdf",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0132d5a3b12202772",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-06fbba2642e938e4b"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-08f0d56b6fd90d07b",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-0081e7babfae5f6d9"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0554423097f38e776",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-05373bc7487ba837f"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0dc16fcdfa215bbdf",
            "owner_id": "851725350979",
            "route_table_id": "rtb-0dc16fcdfa215bbdf",
            "routes": [],
            "subnet_id": "subnet-06fbba2642e938e4b",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-0dc16fcdfa215bbdf",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-08f0d56b6fd90d07b",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-0081e7babfae5f6d9"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0554423097f38e776",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-05373bc7487ba837f"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0132d5a3b12202772",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-06fbba2642e938e4b"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0dc16fcdfa215bbdf",
            "owner_id": "851725350979",
            "route_table_id": "rtb-0dc16fcdfa215bbdf",
            "routes": [],
            "subnet_id": "subnet-05373bc7487ba837f",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-0dc16fcdfa215bbdf",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-08f0d56b6fd90d07b",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-0081e7babfae5f6d9"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0554423097f38e776",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-05373bc7487ba837f"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0132d5a3b12202772",
                "route_table_id": "rtb-0dc16fcdfa215bbdf",
                "subnet_id": "subnet-06fbba2642e938e4b"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0dc16fcdfa215bbdf",
            "owner_id": "851725350979",
            "route_table_id": "rtb-0dc16fcdfa215bbdf",
            "routes": [],
            "subnet_id": "subnet-0081e7babfae5f6d9",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-051993444f81b9068",
            "default_route_table_id": "rtb-051993444f81b9068",
            "id": "rtb-051993444f81b9068",
            "owner_id": "851725350979",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0576c65f17cf5bc0f",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-0576c65f17cf5bc0f",
            "domain": "vpc",
            "id": "eipalloc-0576c65f17cf5bc0f",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-48-109-144.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.109.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bfd851b26a08a87",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-06bfd851b26a08a87",
            "domain": "vpc",
            "id": "eipalloc-06bfd851b26a08a87",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-61-56.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.61.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03708bc5faa59fb5c",
            "arn": "arn:aws:ec2:eu-north-1:851725350979:elastic-ip/eipalloc-03708bc5faa59fb5c",
            "domain": "vpc",
            "id": "eipalloc-03708bc5faa59fb5c",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-170-2-167.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.2.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:internet-gateway/igw-0288f4db70ceb1c07",
            "id": "igw-0288f4db70ceb1c07",
            "owner_id": "851725350979",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0576c65f17cf5bc0f",
            "association_id": "eipassoc-082615b2b22699815",
            "connectivity_type": "public",
            "id": "nat-0dfa4b71d2b08c263",
            "network_interface_id": "eni-00805cadc7c984c41",
            "private_ip": "10.0.1.16",
            "public_ip": "13.48.109.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bd763362a697759f",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bfd851b26a08a87",
            "association_id": "eipassoc-037b37ac6acad2f36",
            "connectivity_type": "public",
            "id": "nat-0a42f4de3d835b7c4",
            "network_interface_id": "eni-0e7d53291248255ba",
            "private_ip": "10.0.2.41",
            "public_ip": "51.21.61.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00622fc7f0b8f9b26",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03708bc5faa59fb5c",
            "association_id": "eipassoc-01f902d44a06ae00c",
            "connectivity_type": "public",
            "id": "nat-01a04abb54ef2166f",
            "network_interface_id": "eni-0faf42e061b1bbe7a",
            "private_ip": "10.0.3.28",
            "public_ip": "16.170.2.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069ccde6425887c4e",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051993444f81b90681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dfa4b71d2b08c263",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051993444f81b9068",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0288f4db70ceb1c07",
            "id": "r-rtb-06b8477726e8732b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b8477726e8732b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-0dc16fcdfa215bbdf",
            "id": "rtb-0dc16fcdfa215bbdf",
            "owner_id": "851725350979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:route-table/rtb-06b8477726e8732b2",
            "id": "rtb-06b8477726e8732b2",
            "owner_id": "851725350979",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0132d5a3b12202772",
            "route_table_id": "rtb-0dc16fcdfa215bbdf",
            "subnet_id": "subnet-06fbba2642e938e4b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0554423097f38e776",
            "route_table_id": "rtb-0dc16fcdfa215bbdf",
            "subnet_id": "subnet-05373bc7487ba837f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f0d56b6fd90d07b",
            "route_table_id": "rtb-0dc16fcdfa215bbdf",
            "subnet_id": "subnet-0081e7babfae5f6d9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a4447098a47a5c",
            "route_table_id": "rtb-06b8477726e8732b2",
            "subnet_id": "subnet-0bd763362a697759f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b414f4ee4d458171",
            "route_table_id": "rtb-06b8477726e8732b2",
            "subnet_id": "subnet-00622fc7f0b8f9b26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46c2cc29f6e4714",
            "route_table_id": "rtb-06b8477726e8732b2",
            "subnet_id": "subnet-069ccde6425887c4e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-06fbba2642e938e4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fbba2642e938e4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-05373bc7487ba837f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05373bc7487ba837f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0081e7babfae5f6d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0081e7babfae5f6d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-0bd763362a697759f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd763362a697759f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-00622fc7f0b8f9b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00622fc7f0b8f9b26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:subnet/subnet-069ccde6425887c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069ccde6425887c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725350979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0348dba66f6612485"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725350979:vpc/vpc-0348dba66f6612485",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034128cf91c474f22",
            "default_route_table_id": "rtb-051993444f81b9068",
            "default_security_group_id": "sg-05fa05a729f16ffe6",
            "dhcp_options_id": "dopt-01fd146d2877d5712",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0348dba66f6612485",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051993444f81b9068",
            "owner_id": "851725350979",
            "tags": {
              "Environment": "project_intely",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "project_intely",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}